<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/view_profile"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center">

    <ImageView

            android:layout_width="match_parent"
            android:layout_height="440dp"
            android:scaleType="fitXY"
            android:id="@+id/sampul"
            android:src="@drawable/sampul"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
    />

    <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img_item_photo"
            android:layout_width="150dp"
            android:layout_height="220dp"
            android:layout_marginTop="90dp"
            android:scaleType="centerCrop"
            tools:src="@drawable/radity"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:textSize="30dp"
            android:layout_marginTop="8dp"
            tools:text="@string/name_profile"
            android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="@+id/img_item_photo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/textView"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorSubtitle"
            android:textSize="15dp"
            android:layout_marginTop="0dp"
            tools:text="@string/sebagai_profile"
            android:textAlignment="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline_horizontal_10"/>


    <TextView
            style="@style/TextContent"
            android:text="@string/content"
            android:lineSpacingMultiplier="1"
            android:id="@+id/content"
            android:textColor="@android:color/black"
            app:layout_constraintTop_toBottomOf="@+id/sampul"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="24dp"
            tools:layout_editor_absoluteX="30dp"/>

    <TextView
            style="@style/TextContent"
            android:text="@string/profile"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.05"
            app:layout_constraintTop_toBottomOf="@+id/content"
            android:id="@+id/textView2"/>
    <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteX="-16dp"
            android:id="@+id/table"
            app:layout_constraintTop_toBottomOf="@+id/textView2" android:layout_marginTop="4dp">

        <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:layout_editor_absoluteX="0dp"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/textView2">

            <TextView
                    style="@style/TextContent.Subtitle"
                    android:text="@string/item_profile_1"/>

            <TextView
                    style="@style/TextSpec.Value"
                    android:text="@string/content_profile_1"/>

        </TableRow>
        <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:layout_editor_absoluteX="0dp"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/textView2">

            <TextView
                    style="@style/TextContent.Subtitle"
                    android:text="@string/item_profile_2"
            />

            <TextView
                    style="@style/TextSpec.Value"
                    android:text="@string/content_profile_2"/>

        </TableRow>
        <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:layout_editor_absoluteX="0dp"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/textView2">

            <TextView
                    style="@style/TextContent.Subtitle"
                    android:text="@string/item_profile_3"
            />

            <TextView
                    style="@style/TextSpec.Value"
                    android:text="@string/content_profile_3"/>

        </TableRow>
        <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:layout_editor_absoluteX="0dp"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/textView2">

            <TextView
                    style="@style/TextContent.Subtitle"
                    android:text="@string/item_profile_4"
            />

            <TextView
                    style="@style/TextSpec.Value"
                    android:text="@string/content_profile_4"/>

        </TableRow>
    </TableLayout>

    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_horizontal_10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.5"/>

    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_vertical_52"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.7"/>

    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_vertical_48"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.3"/>

</androidx.constraintlayout.widget.ConstraintLayout>
