<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/activity_vertical_margin">

    <LinearLayout
            android:layout_centerVertical="true"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView
                android:id="@+id/tv_item_name"
                android:layout_marginBottom="8dp"
                android:textSize="12sp"
                android:textStyle="bold"
                tools:text="@string/nama_review"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        <TextView
                android:id="@+id/rating"
                android:ellipsize="end"
                android:maxLines="1"
                android:textSize="10sp"
                tools:text="@string/rating"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        <TextView
                android:id="@+id/tv_item_form"
                android:ellipsize="end"
                android:maxLines="2"
                android:textSize="10sp"
                tools:text="@string/isi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
    </LinearLayout>

</RelativeLayout>