<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="4dp"
        card_view:cardCornerRadius="4dp">
    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:padding="8dp">
        <ImageView
                android:id="@+id/img_item_cover"
                android:layout_width="150dp"
                android:layout_height="220dp"
                android:layout_marginBottom="4dp"
                android:scaleType="centerCrop"
                tools:src="@color/colorAccent" />
        <TextView
            style="@style/TextContent.Subtitle"
            tools:text="@string/genre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/img_item_cover"
            android:layout_toRightOf="@id/img_item_cover"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="8dp"
            android:id="@+id/tv_item_genre"/>
        <TextView
                style="@style/TextContent.Subtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/tv_item_sinopsis"
                android:layout_marginLeft="2dp"
                android:layout_marginBottom="4dp"
                android:layout_marginTop="8dp"
                tools:text="@string/tahun"
                android:layout_toEndOf="@id/tv_item_penulis"
                android:layout_toRightOf="@id/tv_item_penulis"
                android:id="@+id/tv_item_tahun"/>
        <TextView
                style="@style/TextSpec.Field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tv_item_name"
                android:maxLines="2"
                android:layout_below="@id/tv_item_genre"
                android:layout_marginBottom="8dp"
                android:layout_toEndOf="@id/img_item_cover"
                android:layout_toRightOf="@id/img_item_cover"
                tools:text="@string/judul" />
        <TextView
                style="@style/TextContent.Subtitle"
                android:id="@+id/tv_item_penulis"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/tv_item_sinopsis"
                android:layout_marginLeft="@dimen/activity_vertical_margin"
                android:layout_toEndOf="@id/img_item_cover"
                android:layout_toRightOf="@id/img_item_cover"
                tools:text="@string/nama_penulis"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="4dp"/>
        <TextView
                android:id="@+id/tv_item_sinopsis"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_above="@+id/layout_button"
                android:layout_marginLeft="@dimen/activity_vertical_margin"
                android:layout_marginRight="@dimen/activity_vertical_margin"
                android:layout_toEndOf="@id/img_item_cover"
                android:layout_toRightOf="@id/img_item_cover"
                android:ellipsize="end"
                android:maxLines="3"
                tools:text="@string/sinopsis"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="16dp"/>
        <LinearLayout
                android:id="@+id/layout_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_toEndOf="@id/img_item_cover"
                android:layout_toRightOf="@id/img_item_cover"
                android:orientation="horizontal">
            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:src="@drawable/ic_star_black_24dp"
                    android:id="@+id/rating"
                    android:layout_alignBottom="@+id/layout_button"/>

            <TextView
                    style="@style/TextContent.Subtitle"
                    tools:text="@string/rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginLeft="1dp"
                    android:layout_marginBottom="8dp"
                    android:id="@+id/tv_item_rating"
                    android:layout_alignStart="@+id/layout_button"/>
        </LinearLayout>
    </RelativeLayout>

</androidx.cardview.widget.CardView>