<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/item_detail"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center">

    <ImageView
            android:id="@+id/img_item_cover"
            android:layout_width="120dp"
            android:layout_height="176dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:scaleType="centerCrop"
            tools:src="@color/colorAccent"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:layout_marginStart="@dimen/activity_vertical_margin"/>

    <TextView
            style="@style/TextSpec.Field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_item_name"
            android:layout_marginBottom="8dp"
            app:layout_constraintStart_toEndOf="@id/img_item_cover"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="24dp"
            android:maxEms="10"
            android:layout_marginStart="@dimen/activity_vertical_margin"
            tools:text="@string/judul" />

    <TextView
            style="@style/TextContent.Subtitle"
            android:id="@+id/tv_item_penulis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_vertical_margin"
            app:layout_constraintStart_toEndOf="@id/img_item_cover"
            tools:text="@string/nama_penulis"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_item_name"/>

    <TextView
            style="@style/TextContent.Subtitle"
            tools:text="@string/tahun"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="@dimen/activity_vertical_margin"
            app:layout_constraintTop_toBottomOf="@+id/tv_item_penulis"
            app:layout_constraintStart_toEndOf="@id/img_item_cover"
            android:layout_marginBottom="8dp"
            android:id="@+id/tv_item_tahun"/>
    <TextView
            style="@style/TextContent.Subtitle"
            tools:text="@string/genre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="@dimen/activity_vertical_margin"
            app:layout_constraintTop_toBottomOf="@+id/tv_item_tahun"
            app:layout_constraintStart_toEndOf="@id/img_item_cover"
            android:layout_marginBottom="8dp"
            android:id="@+id/tv_item_genre"/>

    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@id/tv_item_genre"
            android:src="@drawable/ic_star_black_24dp"
            app:layout_constraintStart_toStartOf="@id/guideline_vertical_48"
            app:layout_constraintEnd_toEndOf="@id/guideline_vertical_48"
            android:id="@+id/rating"
    />

    <TextView
            style="@style/TextContent.Subtitle"
            tools:text="@string/rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_vertical_margin"
            app:layout_constraintTop_toBottomOf="@+id/rating"
            app:layout_constraintStart_toStartOf="@id/guideline_vertical_48"
            app:layout_constraintEnd_toEndOf="@id/guideline_vertical_48"
            android:layout_marginBottom="8dp"
            android:id="@+id/tv_item_rating"/>

    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@id/tv_item_genre"
            android:src="@drawable/ic_book_black_24dp"
            app:layout_constraintStart_toStartOf="@id/guideline_vertical_52"
            app:layout_constraintEnd_toEndOf="@id/guideline_vertical_52"
            android:id="@+id/type"
    />

    <TextView
            style="@style/TextContent.Subtitle"
            tools:text="@string/type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_vertical_margin"
            app:layout_constraintTop_toBottomOf="@+id/rating"
            app:layout_constraintStart_toStartOf="@id/guideline_vertical_52"
            app:layout_constraintEnd_toEndOf="@id/guideline_vertical_52"
            android:layout_marginBottom="8dp"
            android:id="@+id/tv_item_type"/>

    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@id/tv_item_genre"
            android:src="@drawable/ic_pages_black_24dp"
            app:layout_constraintStart_toStartOf="@id/guideline_vertical_40"
            app:layout_constraintEnd_toEndOf="@id/guideline_vertical_40"
            android:id="@+id/halaman"
    />

    <TextView
            style="@style/TextContent.Subtitle"
            tools:text="@string/halaman"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_vertical_margin"
            app:layout_constraintTop_toBottomOf="@+id/rating"
            app:layout_constraintStart_toStartOf="@id/guideline_vertical_40"
            app:layout_constraintEnd_toEndOf="@id/guideline_vertical_40"
            android:layout_marginBottom="8dp"
            android:id="@+id/tv_item_halaman"/>

    <androidx.cardview.widget.CardView
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/img_item_cover"
            android:id="@+id/cv_1"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:layout_marginStart="@dimen/activity_vertical_margin"
            android:layout_marginEnd="@dimen/activity_vertical_margin"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/colorshadow"
            card_view:cardCornerRadius="15dp">
        <TextView
                android:id="@+id/tv_item_sinopsis"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_vertical_margin"
                android:layout_marginRight="@dimen/activity_vertical_margin"
                android:ellipsize="end"
                tools:text="@string/sinopsis"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:layout_marginBottom="@dimen/activity_horizontal_margin"
                android:layout_marginEnd="@dimen/activity_vertical_margin"
                android:layout_marginStart="@dimen/activity_vertical_margin"
                android:textColor="@android:color/black"
        />

    </androidx.cardview.widget.CardView>

    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_vertical_52"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.6"/>

    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_vertical_48"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5"/>

    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_vertical_40"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.7"/>
</androidx.constraintlayout.widget.ConstraintLayout>
